Gem renamed to Sunomono
A lot of chages were made because of the rename process. The most
important are:

* Fixed some structure issue and better modularization
* There are two binaries now, sunomono and suno
* All generators which name's were camel case, now are now splitted by
 '-'

--- a/lib/skeleton/config/email/template.html
+++ b/lib/skeleton/config/email/template.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Project Name - BDD _OS_ - _STATUS_TITLE_</title>
+    <title>Project Name - Sunomono _OS_ - _STATUS_TITLE_</title>
   </head>
   <body>
     <center>
